upgrade index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICCV 2025 DRL for Real Workshop</title>
+    <title>ICCV 2025 DRL4Real Workshop</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -62,7 +62,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>ICCV 2025 DRL for Real Workshop</h1>
+            <h1>ICCV 2025 DRL4Real Workshop</h1>
         </div>
         <nav>
             <ul>
@@ -302,7 +302,7 @@
         <section id="call-for-papers" class="call-for-papers-section">
             <h2>04 Call for Papers</h2>
             <div class="call-for-papers-content">
-                <p>The DRL for Real Workshop aims to bring together researchers and practitioners from academia and industry to discuss and explore the latest trends, challenges, and innovations in disentangled representation learning and controllable generation. We welcome original research contributions addressing, but not limited to, the following topics:</p>
+                <p>The DRL4Real Workshop aims to bring together researchers and practitioners from academia and industry to discuss and explore the latest trends, challenges, and innovations in disentangled representation learning and controllable generation. We welcome original research contributions addressing, but not limited to, the following topics:</p>
                 
                 <ul>
                     <li>Disentangled representation learning</li>
@@ -331,7 +331,7 @@
         <!-- 研讨会日程部分 -->
         <!-- <section id="workshop" class="workshop-section">
             <h2>06 Workshop Schedule</h2>
-            <h3>DRL for Real: The 1st International Workshop and Challenge on Disentangled Representation Learning for Controllable Generation</h3>
+            <h3>DRL4Real: The 1st International Workshop and Challenge on Disentangled Representation Learning for Controllable Generation</h3>
             
             <div class="workshop-schedule">
                 <div class="workshop-session">
@@ -345,7 +345,7 @@
                         </tr>
                         <tr>
                             <td>09:10 - 09:30</td>
-                            <td>DRL for Real Dataset & Challenge Introduction</td>
+                            <td>DRL4Real Dataset & Challenge Introduction</td>
                             <td>Professor XXX</td>
                         </tr>
                         <tr>
@@ -413,7 +413,7 @@
                         <tr>
                             <td>15:00 - 15:30</td>
                             <td>Challenge Winner Presentations</td>
-                            <td>DRL for Real Challenge Winners</td>
+                            <td>DRL4Real Challenge Winners</td>
                         </tr>
                     </table>
                 </div>
@@ -616,7 +616,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 DRL for Real Workshop. All rights reserved.</p>
+        <p>&copy; 2025 DRL4Real Workshop. All rights reserved.</p>
     </footer>
 
     <script src="js/script.js"></script>
