--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                         <img src="images/chenqiuyu.jpg" alt="Qiuyu Chen">
                         <h3>Qiuyu Chen</h3>
                         <p>Ph.D. Candidate</p>
-                        <p>Shanghai Jiao Tong University, Shanghai, China</p>
-                        <p><a href="mailto:canghaimeng@sjtu.edu.cn">canghaimeng@sjtu.edu.cn</a></p>
+                        <p>Eastern Institute of Technology & Shanghai Jiao Tong University</p>
+                        <p><a href="mailto:qychen@eitech.edu.cn">qychen@eitech.edu.cn</a></p>
                     </div>
                     
                     <div class="person-card">
@@ -494,8 +494,8 @@
                         <img src="images/liziqiang.jpg" alt="Ziqiang Li">
                         <h3>Ziqiang Li</h3>
                         <p>Ph.D. Candidate</p>
-                        <p>Shanghai Jiao Tong University, Shanghai, China</p>
-                        <p><a href="mailto:ziqiangli@sjtu.edu.cn">ziqiangli@sjtu.edu.cn</a></p>
+                        <p>Eastern Institute of Technology & Shanghai Jiao Tong University</p>
+                        <p><a href="mailto:zqli@eitech.edu.cn">zqli@eitech.edu.cn</a></p>
                     </div>
                     
                     <div class="person-card">
@@ -510,8 +510,8 @@
                         <img src="images/weiyuntao.jpg" alt="Yuntao Wei">
                         <h3>Yuntao Wei</h3>
                         <p>Ph.D. Candidate</p>
-                        <p>The Hong Kong Polytechnic University, Hong Kong, China</p>
-                        <p><a href="mailto:yuntao.wei@connect.polyu.hk">yuntao.wei@connect.polyu.hk</a></p>
+                        <p>Eastern Institute of Technology & The Hong Kong Polytechnic University</p>
+                        <p><a href="mailto:ytwei@eitech.edu.cn">ytwei@eitech.edu.cn</a></p>
                     </div>
 
                     <div class="person-card">
@@ -598,12 +598,12 @@
                 <div class="contact-person">
                     <h3>Xin Jin</h3>
                     <p>jinxin@eitech.edu.cn</p>
-                    <p>Professor, Eastern Institute of Technology, Ningbo, China</p>
+                    <p>Assistant Professor, Eastern Institute of Technology, Ningbo, China</p>
                 </div>
                 <div class="contact-person">
                     <h3>Qiuyu Chen</h3>
                     <p>canghaimeng@sjtu.edu.cn</p>
-                    <p>Ph.D. Candidate, Shanghai Jiao Tong University, Shanghai, China</p>
+                    <p>Ph.D. Candidate, Eastern Institute of Technology, Ningbo, China</p>
                 </div>
             </div>
         </section>
