--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                     <div class="person-card">
                         <img src="images/nicusebe.png" alt="Nicu Sebe">
                         <h3>Nicu Sebe</h3>
-                        <p>Professor, Fellow of IAPR</p>
+                        <p>Professor</p>
                         <p>University of Trento, Italy</p>
                         <p><a href="mailto:niculae.sebe@unitn.it">niculae.sebe@unitn.it</a></p>
                     </div>
@@ -544,7 +544,7 @@
                     <div class="person-card">
                         <img src="images/zengwenjun.jpg" alt="Wenjun (Kevin) Zeng">
                         <h3>Wenjun (Kevin) Zeng</h3>
-                        <p>Professor, IEEE Fellow</p>
+                        <p>Professor</p>
                         <p>Eastern Institute of Technology, Ningbo, China</p>
                         <p><a href="mailto:kevzeng@eitech.edu.cn">kevzeng@eitech.edu.cn</a></p>
                     </div>
