--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                         <h3>Yunzhong Zheng</h3>
                         <p>Undergraduate</p>
                         <p>New York University, New York, USA</p>
-                        <!-- <p><a href="mailto:wy_zhang@sjtu.edu.cn">wy_zhang@sjtu.edu.cn</a></p> -->
+                        <p><a href="mailto:yz9712@nyu.edu">yz9712@nyu.edu</a></p>
                     </div>
 
                 </div>
