--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <ul>
                     <li><strong>May 31, 23:59:59 AOE:</strong> Workshop Announcement and Training & Validation Dataset Release</li>
                     <li><strong>June 23, 23:59:59 AOE:</strong> Final Test Dataset Release</li>
-                    <li><strong>June 28, 23:59:59 AOE:</strong> Workshop Paper Deadline</li>
+                    <li><strong>June 30, 23:59:59 AOE:</strong> <a href="https://openreview.net/group?id=thecvf.com/ICCV/2025/Workshop/DRL4Real&referrer=%5BHomepage%5D(%2F)#tab-your-consoles" target="_blank">Workshop Paper Submission</a> Deadline</li>
                     <li><strong>June 30, 23:59:59 AOE:</strong> Competition Submission Deadline</li>
                     <li><strong>July 3, 23:59:59 AOE:</strong> Notification of Competition Results</li>
                     <li><strong>July 7, 23:59:59 AOE:</strong> Challenge Paper Deadline</li>
