--- a/index.html
+++ b/index.html
@@ -607,6 +607,13 @@
                     </div>
                     
                     <div class="person-card">
+                        <h3>Yuyang Zhang</h3>
+                        <p>Ph.D. Candidate</p>
+                        <p>Eastern Institute of Technology & Shanghai Jiao Tong University</p>
+                        <p><a href="mailto:yuyangzhang@sjtu.edu.cn">yuyangzhang@sjtu.edu.cn</a></p>
+                    </div>
+
+                    <div class="person-card">
                         <h3>Yunzhong Zheng</h3>
                         <p>Undergraduate</p>
                         <p>New York University, New York, USA</p>
